--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -22,3 +22,5 @@ spring.servlet.multipart.max-request-size=215MB
 file.upload-dir=./uploads
 
 spring.jpa.properties.javax.persistence.validation.mode=none
+
+java.runtime.version=17
